//
//  GameStrings.swift
//  Animations
//
//  Created by Freak on 30.03.2026.
//
import Foundation

struct AppStrings {
    struct Buttons {
        static let tapMe = "Tap me"
        static let springMe = "Spring me"
        static let easeMe = "Ease me"
        static let repeatMe = "Repeat me"
        static let pulseMe = "Pulse me"
        static let spinMe = "Spin Me"
        static let rectifyMe = "Rectify Me"
    }
    
    struct Labels {
        static let scaleAmount = "Scale amount"
        static let helloSwiftUI = "Hello SwiftUI"
    }
    
    struct Identifiers {
        static let draggableGradient = "DraggableGradient"
        static let toggleRedButton = "ToggleRedButton"
        static let redRectangle = "RedRectangle"
    }
}
